# gxfp5130-linux

./: .gitignore  README.md  README.tr.md  SECURITY.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_report.yml  config.yml
config/: 60-gxfp.rules  fprintd-gxfp.conf
config/arch/: PKGBUILD
kernel/: Kconfig  MAINTAINERS.fragment  Makefile  README.md  dkms.conf  gxfp_main.c
kernel/cmd/: gxfp_cmd.c  gxfp_cmd.h  gxfp_cmd_mcu_config.c  gxfp_cmd_mcu_config.h  gxfp_cmd_mcu_state.c  gxfp_cmd_mcu_state.h  gxfp_cmd_reset.c  gxfp_cmd_reset.h  gxfp_cmd_version.c  gxfp_cmd_version.h
kernel/docs/: gxfp5130.rst
kernel/driver/: gxfp_irq.c  gxfp_irq.h  gxfp_platform.c  gxfp_platform.h  gxfp_trace.c  gxfp_trace.h  gxfp_uapi.h  gxfp_uapi_ctrl.c  gxfp_uapi_fifo.c  gxfp_uapi_misc.c
kernel/hw/: gxfp_acpi.c  gxfp_acpi.h  gxfp_delay.c  gxfp_delay.h  gxfp_gpio.c  gxfp_gpio.h  gxfp_mmio.c  gxfp_mmio.h
kernel/include/: gxfp_constants.h  gxfp_priv.h
kernel/proto/: gxfp_goodix_proto.c  gxfp_goodix_proto.h  gxfp_mp_proto.c  gxfp_mp_proto.h
kernel/transport/: gxfp_espi_common.c  gxfp_espi_common.h  gxfp_espi_rx_irq.c  gxfp_espi_rx_irq.h  gxfp_espi_rx_sync.c  gxfp_espi_rx_sync.h  gxfp_espi_tx.c  gxfp_espi_tx.h
libfprint/: .gitmodules  flake.nix  meson.build
libfprint/libfprint/: fp-context.c  fp-device.c  (+4 more)
libfprint/libfprint/sigfm/: meson.build
scripts/: build-arch-package.sh  build.sh  doctor.sh  install.sh  make-release.sh  prepare-kernel-patches.sh  provision-psk.sh  send-patches.sh  uninstall.sh  verify.sh
userspace/: CMakeLists.txt
(+12 files in other folders)
